issue with scrolling banner overlap

--- a/app/assets/stylesheets/partials/_dashboard-header.scss
+++ b/app/assets/stylesheets/partials/_dashboard-header.scss
@@ -2,7 +2,7 @@ header.dashboard {
   position: fixed;
   width: 100%;
   background-color: rgba($light-gray, .95);
-  box-shadow: 0px 0px 10px rgba($night,.1);
+  // box-shadow: 0px 0px 10px rgba($night,.1);
   z-index: 9;
 
   h1 {
