--- a/app/assets/stylesheets/partials/_navbar.scss
+++ b/app/assets/stylesheets/partials/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   justify-content: space-between;
-  background: rgba($light-gray, .95);
+  background-color: white; //was background: rgba($light-gray, .95);
   height: 10vh;
   position: sticky;
   top: 0;
